# quicktools

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/skills/create-node/: SKILL.md
.codex/skills/create-node/agents/: openai.yaml
.codex/skills/create-node/references/: node-implementation-checklist.md
.codex/skills/create-node/scripts/: scaffold_node.py
.github/workflows/: release-macos.yml
docs/: release.md
landing/: README.md  config.js  index.html  styles.css
openspec/changes/archive/2026-02-28-add-connection-context-menu-modal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-add-dark-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-fix-node-click-focus-parameter-panel/: design.md  notes.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-refactor-app-modular-node-system/: design.md  proposal.md  tasks.md
openspec/specs/node-definition-registry/: spec.md
openspec/specs/node-focus-and-editor-interaction/: spec.md
openspec/specs/ui-theme-mode/: spec.md
scripts/: canvas_interaction_checks.mjs  node_registry_checks.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: executor.rs  main.rs  models.rs  storage.rs
src/components/: ContextMenuModal.tsx
src/features/workflow/: constants.ts  flowAdapters.ts  flowNodeComponents.tsx  model.ts
src/hooks/: useDeleteEdgeShortcut.ts  useThemeMode.ts  useWorkflowPersistence.ts
src/types/: workflow.ts
(+25 files in other folders)
